--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -15,7 +15,7 @@
 }
 
 .topContent{
-    margin-top: 10em;
+    margin-top: 15em;
 }
 
 .topTitle{
@@ -32,15 +32,15 @@
     font-size: 22px;
 }
 
-.contractingIcon{
+.ecommerceIcon{
     height: 80px;
     width: 80px;
 }
-.finshingWorksIcon{
+.designIcon{
     height: 80px;
     width: 80px;
 }
-.trainingIcon{
+.webIcon{
     height: 80px;
     width: 80px;
 }
@@ -89,4 +89,47 @@
     width: 100px;
     margin: -1.9rem auto 0;
     margin-bottom: 3rem;
+}
+
+.navTitle{
+    font-family: 'Montserrat',sans-serif;
+    color: #ffffff !important;
+    font-weight: 700;
+    font-size: 30px;
+}
+.navTitleScroll{
+    font-family: 'Montserrat',sans-serif;
+    color: #051b35 !important;
+    font-weight: 700;
+    font-size: 30px;
+}
+
+.navBackground{
+    -webkit-transition: background-color 400ms linear;
+    -moz-transition: background-color 400ms linear;
+    -o-transition: background-color 400ms linear;
+    transition: background-color 400ms linear;
+    background-color: rgba(00, 00, 00, 0.0)!important;
+}
+.navBackgroundScroll{
+    -webkit-transition: background-color 400ms linear;
+    -moz-transition: background-color 400ms linear;
+    -o-transition: background-color 400ms linear;
+    transition: background-color 400ms linear;
+    background-color: #ffffff;
+}
+
+.navItem{
+    text-decoration: none !important;
+    font-family: 'Montserrat',sans-serif;
+    color: #ffffff !important;
+    font-weight: 700;
+    font-size: 16px;
+}
+.navItemScroll{
+    text-decoration: none !important;
+    font-family: 'Montserrat',sans-serif;
+    color: #000000 !important;
+    font-weight: 700;
+    font-size: 16px;
 }
